optimize mc ping ui